# api-versioner

./: README.md  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml
api_versioner/: __init__.py  deprecation.py  endpoint.py  migration.py  router.py  version.py
src/: worker.ts
tests/: test_api_versioner.py
